--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 
 # Site settings
 title: Language and Computation in Neural Systems
-email: lacns@mpi.nl
+email: lacns-contact@mpi.nl
 description: >- # this means to ignore newlines until "baseurl:"
   We are an international group of scientists consisting of linguists, cognitive scientists, cognitive neuroscientists, computational neuroscientists, computational modellers, computational scientists, and engineers. We are interested in how the mind and brain processes speech and language.
 
